forgot to run document() before last push

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,3 +7,7 @@ export(loadRSEMs)
 export(reorderFactorsByFile)
 export(runDEseqSet)
 export(splitAndBuildDEobjs)
+import(DESeq2)
+import(tidyverse)
+importFrom(magrittr,"%>%")
+importFrom(purrr,"~")
