did i get all imports into namespace this time

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,9 @@ export(reorderFactorsByFile)
 export(runDEseqSet)
 export(splitAndBuildDEobjs)
 import(DESeq2)
-import(tidyverse)
+import(dplyr)
+import(forcats)
+import(purrr)
+import(readr)
+import(tximport)
 importFrom(magrittr,"%>%")
