--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,4 +16,6 @@ Imports:
         RColorBrewer (>= 1.1-2) ,
         pheatmap (>= 1.0.8) ,
         BiocParallel (>= 1.11.6) ,
-        tidyverse (>= 1.3.2)
+        tidyverse (>= 1.3.2) ,
+        purrr (>= 0.3.4)
+        
