planning and removed excess comments
I moved comments with to-do items from the R files into the input format requirements and notes doc
I updated version numnber, first advance of that since the basics of analysis with loaders and analyzers are now put together
I updated packages call file to include ggplot2 that I havent yet used but will soon
I updated license to match the github license

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(sortRes)
 export(splitAndBuildDEobjs)
 import(DESeq2)
 import(dplyr)
+import(ggplot2)
 importFrom(forcats,as_factor)
 importFrom(magrittr,"%>%")
 importFrom(purrr,as_vector)
