--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,11 @@
 Package: modRIPseq
 Title: Run analysis of gene expression count tables for 8OGseq
-Version: 0.0.0.9000
+Version: 0.0.1.9000
 Authors@R: 
     person("Kevin", "Baldridge", , "baldridge.kevin@utexas.edu", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-1829-7714"))
-Description: This package will take gene expression count tables from RNAseq+RIPseq data that is aggregated at the transcript level and run the analysis as was presented in the Communications Biology paper. 
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+Description: This package will take gene expression count tables from RNAseq+RIPseq data that is aggregated at the transcript level and run the analysis as was presented in the Communications Biology paper (Gonzalez-Rivera et al 2020). 
+License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
@@ -17,5 +16,5 @@ Imports:
         pheatmap (>= 1.0.8) ,
         BiocParallel (>= 1.11.6) ,
         tidyverse (>= 1.3.2) ,
-        purrr (>= 0.3.4)
-        
+        purrr (>= 0.3.4) ,
+        ggplot2 (>= 3.3.6)
