--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,4 +17,6 @@ Imports:
         BiocParallel (>= 1.11.6) ,
         tidyverse (>= 1.3.2) ,
         purrr (>= 0.3.4) ,
-        ggplot2 (>= 3.3.6)
+        ggplot2 (>= 3.3.6) ,
+        biomaRt (>= 2.52.0) ,
+        enrichR (>= 3.1)
