added basic venn diagram viz function
still needs plenty more edits, basic framework now without any aesthetic styling.
also note that I identified some discrepancies with my results compared to the published comms bio paper, will work on investigating this soon getting in touch with Dr. Gonzalez-Rivera

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: modRIPseq
 Title: Run analysis of gene expression count tables for 8OGseq
-Version: 0.0.1.9000
+Version: 0.0.1.9001
 Authors@R: 
     person("Kevin", "Baldridge", , "baldridge.kevin@utexas.edu", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-1829-7714"))
@@ -19,4 +19,5 @@ Imports:
         purrr (>= 0.3.4) ,
         ggplot2 (>= 3.3.6) ,
         biomaRt (>= 2.52.0) ,
-        enrichR (>= 3.1)
+        enrichR (>= 3.1) ,
+        VennDiagram (>= 1.7.3)
