--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,10 +14,10 @@ export(setTfmContrast)
 export(sortRes)
 export(splitAndBuildDEobjs)
 import(DESeq2)
-import(VennDiagram)
 import(biomaRt)
 import(dplyr)
 import(enrichR)
+import(ggVennDiagram)
 import(ggplot2)
 importFrom(forcats,as_factor)
 importFrom(magrittr,"%>%")
