--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: modRIPseq
 Title: Run analysis of gene expression count tables for 8OGseq
-Version: 0.0.1.9001
+Version: 0.0.1.9002
 Authors@R: 
     person("Kevin", "Baldridge", , "baldridge.kevin@utexas.edu", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-1829-7714"))
@@ -8,7 +8,7 @@ Description: This package will take gene expression count tables from RNAseq+RIP
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.3
 Imports:
         DESeq2 (>= 1.17.15) ,
         tximport (>= 1.5.0) ,
@@ -20,4 +20,11 @@ Imports:
         ggplot2 (>= 3.3.6) ,
         biomaRt (>= 2.52.0) ,
         enrichR (>= 3.1) ,
-        ggVennDiagram (>= 1.2.2)
+        ggVennDiagram (>= 1.2.2) ,
+        forcats (>= 0.5.2) ,
+        magrittr (>= 2.0.3) ,
+        readr (>= 2.1.3) ,
+        stringr (>= 1.5.0) ,
+        dplyr (>= 1.0.10) ,
+        stringi (>= 1.7.8) ,
+        utils (>= 4.2.2)
